translate 01_13_B_iron_mine category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -876,24 +876,24 @@
     <Entry Name="EventWormDeath">Што... Як... Гэтая штука была вялізнай.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_13_B_iron_mine">
-    <Entry Name="DescDoorPanel">Another security keypad.</Entry>
-    <Entry Name="EventWrongCode01">Assuming it's a 4 digit code, there's 10,000 possible permutations. I might guess it eventually.</Entry>
-    <Entry Name="EventLockedDoor01">Another security door, I'll need the code I suppose. What's with all the extra precautions in this section?</Entry>
-    <Entry Name="DescLockedDoor01">This door's not designed to just fall open.</Entry>
-    <Entry Name="DescLockedDoor02">Pretty solid.</Entry>
-    <Entry Name="DescLockedDoor03">Another security door.</Entry>
-    <Entry Name="EventLockedDoor02">The door has been forged shut, it will never open again.</Entry>
-    <Entry Name="EventLockedDoor03">Must be locked from the other side.</Entry>
-    <Entry Name="DescEntrance">It's heavy, metal, and not likely to budge with ease.</Entry>
-    <Entry Name="EventEntrance01">I can't see how to get back through.</Entry>
-    <Entry Name="DescShelf01">Just some communications kit, and sacking.</Entry>
-    <Entry Name="DescShelf02">Never... seen... so many sacks.</Entry>
-    <Entry Name="DescShelf03">Some bits and pieces, not worth digging through the barbed wire for, though.</Entry>
-    <Entry Name="DescFence1">Looks like this route was sealed off at one stage. I guess it's open now.</Entry>
-    <Entry Name="DescFence2">I can see why they'd need fencing down here, but why use barbed wire? What were they trying to keep out?</Entry>
-    <Entry Name="DescMetalBox">More contemporary mining crates... although they look more like cages.</Entry>
-    <Entry Name="DescControl">This must operate those valves in some way.</Entry>
-    <Entry Name="DescPipes">These are marked as steam pipes... they'd do quite some damage, maybe I could use them.</Entry>
+    <Entry Name="DescDoorPanel">Яшчэ адна панэль бяспекі.</Entry>
+    <Entry Name="EventWrongCode01">Улічваючы, што гэта 4-значны код, існуе 10000 магчымых камбінацый. Можа ўрэшце і ўгадаю.</Entry>
+    <Entry Name="EventLockedDoor01">Іншыя зачыненыя дзверы, спатрэбіцца код, як мяркую. Навошта столькі дадатковых мер засцярогі ў гэтай секцыі?</Entry>
+    <Entry Name="DescLockedDoor01">Гэтыя дзверы не створаны для таго, каб самавольна адчыняцца.</Entry>
+    <Entry Name="DescLockedDoor02">Даволі надзейныя.</Entry>
+    <Entry Name="DescLockedDoor03">Іншыя зачыненыя дзверы.</Entry>
+    <Entry Name="EventLockedDoor02">Гэтыя дзверы надзейна заблакіраваныя, яны больш ніколі не адчыняцца.</Entry>
+    <Entry Name="EventLockedDoor03">Мабыць зачыненыя з іншага боку.</Entry>
+    <Entry Name="DescEntrance">Цяжкія, металічныя і наўрад ці зрушацца з месца.</Entry>
+    <Entry Name="EventEntrance01">Не ведаю, як патрапіць назад.</Entry>
+    <Entry Name="DescShelf01">Некія мяхі і камунікацыйныя прылады.</Entry>
+    <Entry Name="DescShelf02">Ніколі... Не бачыў... Столькі мяшкоў.</Entry>
+    <Entry Name="DescShelf03">Нейкія мелач, не варта лезці за ёй праз калючы дрот, аднак.</Entry>
+    <Entry Name="DescFence1">Падобна на тое, што гэтая секцыя была закрыта на пэўным этапе. Здаецца, што цяпер ён адкрыты.</Entry>
+    <Entry Name="DescFence2">Я магу здагадацца, навошта тут гэтая агароджа, але для чаго калючы дрот? Што яны спрабавалі адагнаць?</Entry>
+    <Entry Name="DescMetalBox">Больш сучасныя шахцёрскія скрыні... Таксама, яны больш падобныя на клеткі.</Entry>
+    <Entry Name="DescControl">Гэта павінна нейкім чынам кіраваць тымі клапанамі.</Entry>
+    <Entry Name="DescPipes">Яны пазначаны як паравыя трубы... Яны могуць нарабіць сур'ёзнай шкоды, магчыма, я мог бы гэта выкарыстаць.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_13_C_iron_mine">
     <Entry Name="EventLockedWormDoor">It's locked from the other side.</Entry>
