translate 01_14_refinery category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -923,24 +923,24 @@
     <Entry Name="EventNoTimeForValve">Damnit, this is taking too long!</Entry>
   </CATEGORY>
   <CATEGORY Name="01_14_refinery">
-    <Entry Name="JammedDoor">The door's jammed shut.</Entry>
-    <Entry Name="JammedDoor2">Stuck. It must have jammed shut when I closed it.</Entry>
-    <Entry Name="EngineArea">All the machinery looks in tact. It's just missing a motor.</Entry>
-    <Entry Name="ladder01">That ladder's fairly precarious, maybe I could knock it down somehow.</Entry>
-    <Entry Name="convstart">A conveyor belt. I wonder where it goes?</Entry>
-    <Entry Name="convend">That conveyor belt must come out at this hole.</Entry>
-    <Entry Name="engine">Some sort of spare motor.</Entry>
-    <Entry Name="DescControl">The control panel for those pistons.</Entry>
-    <Entry Name="DescMachine">This must be the hub where all the rock from the mine is collected and refined. These pistons would crush every bone in my body.</Entry>
-    <Entry Name="DescLoading">I'm certain most people wouldn't want to get close enough to this machine to read those instructions.</Entry>
-    <Entry Name="DescCable">This wire connects those buttons up to that pressing machine.</Entry>
-    <Entry Name="DescGateOpen">The hatch is open, but there's still a safety grill in the way.</Entry>
-    <Entry Name="DescGateClosed">This conveyor belt's closed off.</Entry>
-    <Entry Name="DescHoles">Maybe one of those huge worm things came through here... I'd rather believe it was standard corrosion, but I doubt it.</Entry>
-    <Entry Name="DescGateButton">I wonder what this operates...</Entry>
-    <Entry Name="DescEngineRunning">It's running like clockwork. There's a nice surprise.</Entry>
-    <Entry Name="DescFan">This whole facility must have been a death trap, this fan would slice meat in a millisecond. I wonder if I can stop it.</Entry>
-    <Entry Name="DescFanOff">Should be safe now, if I'm quick.</Entry>
+    <Entry Name="JammedDoor">Дзверы надзейна зачыненыя.</Entry>
+    <Entry Name="JammedDoor2">Захрасла. Напэўна, зачынілася, калі я яе закрыў.</Entry>
+    <Entry Name="EngineArea">Уся тэхніка выглядае рабочай. Проста не хапае рухавіка.</Entry>
+    <Entry Name="ladder01">Гэтая лесвіца даволі хісткая, магчыма, я мог неяк яе збіць.</Entry>
+    <Entry Name="convstart">Канвеерная стужка. Цікава, куды яна вядзе?</Entry>
+    <Entry Name="convend">Тая канвеерная стужка павінна выходзіць з гэтай дзіры.</Entry>
+    <Entry Name="engine">Нейкі запасны рухавік.</Entry>
+    <Entry Name="DescControl">Панэль кіравання тымі поршнямі.</Entry>
+    <Entry Name="DescMachine">Гэта павінен быць вузел, дзе збіраюць і ачышчаюць усю пароду з шахты. Гэтыя поршні параскрышваюць кожную косць у маім целе.</Entry>
+    <Entry Name="DescLoading">Я ўпэўнены, што большасць людзей не будзе набліжацца да гэтай машыны, каб прачытаць інструкцыі.</Entry>
+    <Entry Name="DescCable">Гэты дрот падключае тыя кнопкі да гэтай прасавальнай машыны.</Entry>
+    <Entry Name="DescGateOpen">Люк адкрыты, але на шляху ўсё яшчэ ёсць ахоўная рашотка.</Entry>
+    <Entry Name="DescGateClosed">Канвеерная стужка перагароджана.</Entry>
+    <Entry Name="DescHoles">Магчыма, адзін з тых велізарных чарвякоў прапоўз тут... Я хацеў бы думаць, што гэта была звычайная карозія, але сумняваюся.</Entry>
+    <Entry Name="DescGateButton">Цікава, чым гэта кіруе...</Entry>
+    <Entry Name="DescEngineRunning">Працуе як гадзіннік. Прыемны сюрпрыз.</Entry>
+    <Entry Name="DescFan">Напэўна, увесь гэты аб'ект быў смяротнай пасткай, гэты вентылятар разрэзаў бы мяса ў мілісекунду. Цікава, ці магу я яго выключыць.</Entry>
+    <Entry Name="DescFanOff">Цяпер павінна быць бяспечна, калі буду хуткім.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_15_icecave">
     <Entry Name="DescShed">A disused shed. Who knows how old it is, or who last used it.</Entry>
