translate 01_18_mining_room category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -826,40 +826,40 @@
     <Entry Name="01_11_find_key_and_gas">Рэд казаў пра ключ і нейкі "уперад-сок"?</Entry>
   </CATEGORY>
   <CATEGORY Name="01_18_mining_room">
-    <Entry Name="UnderDoor">There's about a half inch gap under the door, but the connecting room's pitch black.</Entry>
-    <Entry Name="KeyHoleWithKey">Something's stuck in the key hole. I'll take an optimistic guess and say it's the key.</Entry>
-    <Entry Name="KeyHoleNoKey">I can see through the hole now, but it's pretty dark on the other side.</Entry>
-    <Entry Name="DoorLocked">It's locked from the other side, but I think the key's still in the lock.</Entry>
-    <Entry Name="PokeNoPaper">Poking the key out isn't going to achieve anything. I need a way to collect it from under the door, once I've pushed it out.</Entry>
-    <Entry Name="DescDoor01">The door's locked. Looks like there's something stuck in the keyhole.</Entry>
-    <Entry Name="DescLightSwitch">A light switch.</Entry>
-    <Entry Name="EventReadUvNote01">Ah, with the UV light, there's some text showing up on that blank piece of paper!</Entry>
-    <Entry Name="EventReadUvNote02">The note reads: "Storage password: 1371"</Entry>
-    <Entry Name="EventBlankNote">As far as I can tell, there's nothing at all written on this note.</Entry>
-    <Entry Name="EventBlankNoteHadLooked">Perhaps there's some text written in a special ink, like UV?</Entry>
-    <Entry Name="DescChains">These chains are holding the cart in place.</Entry>
-    <Entry Name="DescBoards">There's a mess of statistics and crude drawings on this chalkboard. They all relate to a large species of annelid.</Entry>
-    <Entry Name="DescHole">From the debris, I'd say something huge broke into the room not too long ago. There's blood and slime everywhere.</Entry>
-    <Entry Name="DescWall01">There's writing scrawled everywhere, must be in ultra violet ink. Definately the product of a deranged mind. But whose?</Entry>
-    <Entry Name="DescWall02">There's writing scrawled everywhere, must be in ultra violet ink. Definately the product of a deranged mind. But whose?</Entry>
-    <Entry Name="DescWall03">There's writing scrawled everywhere, must be in ultra violet ink. Definately the product of a deranged mind. But whose?</Entry>
-    <Entry Name="DescMicroscope">A 60's microscope. Functional for research purposes, but we've come a long way since these were common.</Entry>
-    <Entry Name="DescProjector">An overhead projector.</Entry>
-    <Entry Name="DescVentEntrance01">To far up to reach, I don't see any point going back there anyway.</Entry>
-    <Entry Name="DescShaft">It's completely closed up, I can't get out that way. I may never get out.</Entry>
-    <Entry Name="DescCartWinch">A cart and tracks for transporting ore. As far as I know, they use the same set up to this day.</Entry>
-    <Entry Name="DescBookCases">Stacks of books. They're a mixture of industrial reference material, and scientific journals.</Entry>
-    <Entry Name="DescProjectorImage">It's badly faded, but it looks like a close up view of some species of annelid.</Entry>
-    <Entry Name="DescNoteboard">Images and notes relating to the 'Grey Rock Worm'. This thing is big, for an invertebrate.</Entry>
-    <Entry Name="DescClippings">Hundreds of newspaper clippings, all to do with biomedical sciences, local wildlife, or field studies.</Entry>
-    <Entry Name="DescPaperFloor">Some medical notes, they look to have been disturbed recently.</Entry>
-    <Entry Name="DescHabitat">It's an artificial habitat. Those things look long dead... I think I know how they felt, not being able to get out.</Entry>
-    <Entry Name="DescBlood">Whatever happened in here, someone must have been in a great deal of pain.</Entry>
-    <Entry Name="DescGreenBlood">There's only one green blooded, land-dwelling creature big enough to loose this much blood [u8211] and I don't see many skink lizards hanging about.</Entry>
-    <Entry Name="DescBrickWall">What? This wall... it's new. The cement's almost wet, it can't have been put up more than a week ago. What the hell?</Entry>
-    <Entry Name="DescDeadWorm">It looks to be a smaller species of that worm thing I saw earlier, or just a juvenile. It's been dissected, the internal organs removed. It couldn't be much older than that wall I demolished.</Entry>
-    <Entry Name="DescSnails">So much death and disease down here. I suppose slugs were an inevitability.</Entry>
-    <Entry Name="DescCabinet">All these cabinets are damaged, something violent went on in here.</Entry>
+    <Entry Name="UnderDoor">Пад дзвярыма ёсць шчыліна прыкладна ў паўцалі, але пакой за імі цёмны.</Entry>
+    <Entry Name="KeyHoleWithKey">Нешта захрасла ў замочнай шчыліне. Я буду аптымістам і выкажу меркаванне, што гэта ключ.</Entry>
+    <Entry Name="KeyHoleNoKey">Цяпер я бачу праз дзірку, але з іншага боку даволі цёмна.</Entry>
+    <Entry Name="DoorLocked">Зачынена з іншага боку, але думаю, што ключ усё яшчэ ў замку.</Entry>
+    <Entry Name="PokeNoPaper">Выштурхваць ключ бессэнсоўна. Мне патрэбна будзе неяк выцягнуць яго з-пад дзвярэй, калі я яго выштурхну.</Entry>
+    <Entry Name="DescDoor01">Дзверы зачыненыя. Здаецца, што ў замочнай шчыліне нешта засела.</Entry>
+    <Entry Name="DescLightSwitch">Пераключальнік святла.</Entry>
+    <Entry Name="EventReadUvNote01">Ах, праз ультрафіялетавае святло на гэтым пустым аркушы паперы з'яўляецца тэкст!</Entry>
+    <Entry Name="EventReadUvNote02">Нататка кажа: "Пароль ад склада: 1371"</Entry>
+    <Entry Name="EventBlankNote">Наколькі я магу сказаць, на гэтай паперы нічога не напісана.</Entry>
+    <Entry Name="EventBlankNoteHadLooked">Магчыма, ёсць тэкст, напісаны спецыяльнымі чарніламі, пад ультрафіялетавай апрацоўкай, напрыклад?</Entry>
+    <Entry Name="DescChains">Гэтыя ланцугі ўтрымліваюць ваганетку на месцы.</Entry>
+    <Entry Name="DescBoards">На гэтай дошцы блытаніна са статыстыкі і грубых малюнкаў. Усе яны стасуюцца вялікага віду кольчатых чарвякоў.</Entry>
+    <Entry Name="DescHole">Па абломках я б сказаў, што не так даўно ў пакой уварвалася нешта велізарнае. Паўсюль кроў і слізь.</Entry>
+    <Entry Name="DescWall01">Паўсюль надрапаныя надпісы, мабыць ультрафіялетавымі чарніламі. Безумоўна прадукт звар'яцелага розуму. Але чыйго?</Entry>
+    <Entry Name="DescWall02">Паўсюль надрапаныя надпісы, мабыць ультрафіялетавымі чарніламі. Безумоўна прадукт звар'яцелага розуму. Але чыйго?</Entry>
+    <Entry Name="DescWall03">Паўсюль надрапаныя надпісы, мабыць ультрафіялетавымі чарніламі. Безумоўна прадукт звар'яцелага розуму. Але чыйго?</Entry>
+    <Entry Name="DescMicroscope">Мікраскоп з 60-х. Падыходзіць для даследчых мэт, але такімі ўжо даўно не карыстаюцца.</Entry>
+    <Entry Name="DescProjector">Кадаскоп.</Entry>
+    <Entry Name="DescVentEntrance01">Не дацягнуцца, усё адно не бачу сэнсу вяртацца туды.</Entry>
+    <Entry Name="DescShaft">Зусім завалена. Я не змагу тут прайсці. Магу ніколі не выйсці.</Entry>
+    <Entry Name="DescCartWinch">Ваганетка і пуці для транспарціроўкі руды. Наколькі я ведаю, такая ж сістэма выкарыстоўваецца і ў нашыя дні.</Entry>
+    <Entry Name="DescBookCases">Стосы кніг. Сярод іх прамысловыя даведачныя матэрыялы і навуковыя часопісы.</Entry>
+    <Entry Name="DescProjectorImage">Яна моцна выцвіла, але выглядае як набліжаная выява нейкага віду кольчатых чарвякоў.</Entry>
+    <Entry Name="DescNoteboard">Выявы і нататкі, звязаныя з "Шэракаменным чарвяком'. Ён завялікі для беспазваночнага.</Entry>
+    <Entry Name="DescClippings">Сотні газетных выразак, усе звязаныя з біямедыцынскімі навукамі, мясцовай дзічыны або палявымі даследаваннямі.</Entry>
+    <Entry Name="DescPaperFloor">Нейкія медыцынскія нататкі, здаецца, нядаўна ў іх нехта капаўся.</Entry>
+    <Entry Name="DescHabitat">Штучнае асяроддзе пражывання. Гэтыя істоты выглядаюць даўно мёртвымі... Думаю, я разумею, што яны адчувалі, не маючы магчымасці выбрацца.</Entry>
+    <Entry Name="DescBlood">Што б тут ні здарылася, камусьці, напэўна, было вельмі балюча.</Entry>
+    <Entry Name="DescGreenBlood">Ёсць толькі адна істота з залёнай крывёю, якая жыве на сушы, дастаткова вялікая, каб страціць столькі крыві [u8211], і я не бачу, каб вакол завісала шмат сцынкавых яшчарак.</Entry>
+    <Entry Name="DescBrickWall">Што? Гэтая сцяна... Яна новая. Гэты цэмент амаль мокры, яна не магла быць закладзена больш за тыдзень таму. Што за чартаўшчына?</Entry>
+    <Entry Name="DescDeadWorm">Здаецца, гэта меншая разнавіднасць таго чарвяка, якога я бачыў раней, або проста маладняк. Ён разрэзаны, унутраныя органы выдаленыя. Ён не можа быць значна старэйшым за тую сцяну, якую я знёс.</Entry>
+    <Entry Name="DescSnails">Тут так шмат смерцяў і хвароб. Я мяркую, што смаўжы былі непазбежнасцю.</Entry>
+    <Entry Name="DescCabinet">Усе гэтыя шафы пашкоджаныя, тут адбывалася нешта жорсткае.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_13_A_iron_mine">
     <Entry Name="EventStartDoor01">Не, дзякуй.</Entry>
