translate Red 15 entries and 01_19_door_shaft

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -785,8 +785,8 @@
     <Entry Name="Red 13.02">Падчас вандроўкі за інструментамі, з дапамогай якіх ты здзейсніш маё выратаванне, ты можаце знайсці месца майго апошняга харчавання... Асцярожней: бліскучая суцэльная падлога вады не такая суцэльная, як здаецца: беднага Рэда амаль не праглынула цалкам!</Entry>
     <Entry Name="Red 13.03">Двое дурнаватых, якія рэзка зваліліся ў мае ўладанні, ужо даўно зышлі, але не думаю, што туды, адкуль яны прыйшлі. У той дзень я пражэрліва еў мяса двухногіх, але, Рэд клянецца, застолле пачалося толькі тады, калі чалавек стаў пікантным, калі смурод жыцця знік, і застаўся толькі салодкі водар гніення.</Entry>
     <Entry Name="Red 14.01">Ох, мой мозг ледзьве можа ўявіць сабе нечалавечыя подзвігі, якія ты, мабыць, гераічна здзяйсняеш, каб выратаваць старога Рэда!  Я чакаю, ужо так блізка, каб ты знёс сцены маёй земляной турэмнай камеры і вызваліў мяне з гэтай смяротнай абалонкі!  </Entry>
-    <Entry Name="Red 15.01">Where are you my shiny knight?  Have you really made it this far?  I wait and wait, and yet the pot never boils, I remain trapped in my den of inequity. Perhaps the gods have toyed  with me once more, sentenced me to yet more years in this place of eternal night-light.</Entry>
-    <Entry Name="Red 15.02">But now, maybe my ill-advice has ended you... have you rung death[u8217]s doorbell?  Please don't leave poor Red all alone once more, like all the others!</Entry>
+    <Entry Name="Red 15.01">Дзе ты, мой бліскучы рыцар?  Ты сапраўды зайшоў так далёка?  Я чакаю і чакаю, і ўсё ж гаршчок ніколі не кіпіць, я застаюся ў пастцы ў сваім логаве няроўнасці. Магчыма, багі яшчэ раз пагуляліся са мною, прысудзіўшы мне яшчэ больш гадоў у гэтым месцы вечнага начнога святла.</Entry>
+    <Entry Name="Red 15.02">Але цяпер, магчыма, мае хваравітыя парады цябе прыкончылі... Ты пастукаў смерці ў дзверы?  Калі ласка, не пакідай беднага Рэда аднаго далей як усе іншыя!</Entry>
     <Entry Name="Red 16.01">Good evening! You... you actually came.  There is much that should leave my throat box now, but words elude me.  You came, you are so pretty!  But I have been bad.</Entry>
     <Entry Name="Red 16.02">The underworld already beckons me, so I suppose one further misdemeanour will change little.  It is false pretension, and not guiding light that has lead you here: I cannot give you the answers you want.</Entry>
     <Entry Name="Red 16.03">You may wish to find what it is that you seek, but that is a fiction: you could not know what it was you sought, through that vast leaden doorway, or else you would seek anything else in the world!</Entry>
@@ -986,42 +986,42 @@
     <Entry Name="01_19_to_01_20">As I stepped into the mouth of the underground facility, there should have been questions, fears, doubts running through me. Instead, I was torn in two.[br][br]Part of me, I felt, had died, along with my only ally, and friend. His final words had raised more questions than they'd answered, and I couldn't get his screams for help out of my head, despite knowing, deep down, that the pain I had caused Red was, itself, all the help I could have offered him. I was alone again, but I had nothing to do, other than press on into the unknown.[br][br]If I'd felt so bad about Red, I should have listened to him and stayed where I was. I would trade his fate a hundred times for my own.[br][br]The other side of me was looking forward, to what might await me in my continued journey. I felt sure that I would soon find some clue or other to my father's fate, and that he was inextricably linked to everything that was happening.[br][br]I also couldn't help but suspect that everything I had seen up until that point was just symptomatic of whatever lay beyond the threshold.[br][br]I know now, I was right.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_19_door_shaft">
-    <Entry Name="DescRubble">This must be the cave in that Red's trapped behind! I need some way to demolish it, quickly. Perhaps I can get some tips from my Explosive's book.</Entry>
-    <Entry Name="DescPassage">This passage has long since fallen away, but Red, or someone, has bridged the gaps with wooden planks.</Entry>
-    <Entry Name="DescPassageDeath">I can barely see the bottom. If I fell, no matter what's waiting down there for me, I'd be dead before I reached it.</Entry>
-    <Entry Name="EventPrepFirst">Right, I'll need a gas supply before I can light the burner, and a beaker to mix the chemicals in.</Entry>
-    <Entry Name="DescShelf">Empty shelves.</Entry>
-    <Entry Name="DescGlass">Glass beakers.</Entry>
+    <Entry Name="DescRubble">Мабыць, гэта той абвал, за якім у пастцы Рэд! Мне трэба неяк яго разабраць, хутка. Магчыма, я змагу знайсці некалькі парад у сваёй кнізе выбуховых рэчываў.</Entry>
+    <Entry Name="DescPassage">Гэты праход даўно абваліўся, але Рэд ці хтосьці іншы накрыў прамежкі драўлянымі дошкамі.</Entry>
+    <Entry Name="DescPassageDeath">Ледзь бачу дно. Калі я ўпаду, незалежна ад таго, што чакае мяне ўнізе, я памру хутчэй, чым далячу да яго.</Entry>
+    <Entry Name="EventPrepFirst">Правільна, трэба падаць газ, перш чым я змагу запаліць гарэлку, і шклянка для змешвання хімічных рэчываў.</Entry>
+    <Entry Name="DescShelf">Пустыя шафкі.</Entry>
+    <Entry Name="DescGlass">Лабараторныя шклянкі.</Entry>
     <Entry Name="DescGasTube">An insulated pipe, running to the furnace. Must be gas.</Entry>
-    <Entry Name="DescTripod">Hmm... perhaps I could use this burner to manufacture a make shift chemical bomb. If I had the right chemicals.</Entry>
-    <Entry Name="DescTable">The sink's blocked with some amalgam of chemical sludge.</Entry>
-    <Entry Name="EventAddChemical">... and I'm mixing this one with...</Entry>
-    <Entry Name="DescEndDoor">This door... it's different, newer than all the others. This must be where Red's been leading me all this time.</Entry>
-    <Entry Name="EventEndDoor01">It's hydraulically sealed - it won't just pry open. Maybe if I could cut the power...</Entry>
-    <Entry Name="EventEndDoorInteract01">I can't get a hold of it. I need something to lever it open.</Entry>
-    <Entry Name="DescPanel01">It's an electrical panel. Funny place to have one...</Entry>
-    <Entry Name="DescCords01">Electrics, maybe running out to the door.</Entry>
-    <Entry Name="EventLockedDoor">Locked.</Entry>
-    <Entry Name="EventOffFail">It must be running the last set sequence, it won't turn off!</Entry>
-    <Entry Name="DescFurnance">Why would Red want me to kill him? Why like this? What can I do?</Entry>
-    <Entry Name="DescMeat">Leaving out how Red managed to catch and kill this thing, it's quite clearly inedible. Poor guy must have been close to starving to death.</Entry>
-    <Entry Name="DescRedTable">I can see Red now, sitting here, guiding me. I probably wouldn't be standing here now if it wasn't for him. Why did he have to leave me down here alone?!</Entry>
-    <Entry Name="DescRedShelf">Reams of books... where did Red scavenge all these from? There's everything from survival manuals, to the collected works of Shakespeare, and Kant's Ethics. If this was how he spent his time, no wonder he spoke so strangely. He must have lead a life time of misunderstanding.</Entry>
-    <Entry Name="DescFeases">Jesus! From the stench, I think this may have been his toilet. I... urgh...</Entry>
-    <Entry Name="DescDoll">My God. That's... horrible. At least I'll be the only person to witness how far Red descended into depravity.</Entry>
-    <Entry Name="DescCage">No wonder he was getting hungry. What a final meal: rationed slugs. Still, knowing Red, perhaps he enjoyed them.</Entry>
-    <Entry Name="DescMadrass">It smells like a sewer, how did Red sleep on this? Maybe he just didn't sleep?</Entry>
-    <Entry Name="DescMachines">Combustion meters, measuring temperature, humidity, and gas flow among others.</Entry>
-    <Entry Name="DescPipes">Supply pipes.</Entry>
-    <Entry Name="EventPotionDone">Ah, I think that's it! So long as I'm careful when i move it, it should stay stable.</Entry>
-    <Entry Name="EventNoGas">There's no gas running to the burner.</Entry>
-    <Entry Name="EventLightLitTripod">The gas is already lit.</Entry>
-    <Entry Name="EventRedDead">I... Red. I'm so sorry. Whatever happened to you down here, it's over now.</Entry>
-    <Entry Name="DescHooks">Vicious looking things, almost like meat hooks...</Entry>
-    <Entry Name="DescAshes">Ashes - all that remains of my only friend down here.</Entry>
-    <Entry Name="DescWallWriting">Poor Red, I'm so sorry. You're at peace now.</Entry>
-    <Entry Name="DescNoose">How many hours did he spend with his neck in this noose, just trying to end it all?</Entry>
-    <Entry Name="EventFoundChemRoom">Ah, this room should serve me well as a potion mixer, with the explosives book being my guide.</Entry>
+    <Entry Name="DescTripod">Хмм... Магчыма, я мог бы выкарыстаць гэтую гарэлку, каб зрабіць самаробную хімічную бомбу. Былі б у мяне патрэбныя хімічныя рэчывы.</Entry>
+    <Entry Name="DescTable">Ракавіна забітая нейкай амальгамай з хімічнага адстою.</Entry>
+    <Entry Name="EventAddChemical">... і я змешваю гэта з...</Entry>
+    <Entry Name="DescEndDoor">Гэтыя дзверы... Яны адрозніваюцца, навейшыя, чым усе астатнія. Напэўна, гэта сюды Рэд вёў мяне ўвесь гэты час.</Entry>
+    <Entry Name="EventEndDoor01">Яны гідраўлічна герметызаваныя - проста так не адчыняцца. Калі б я мог адключыць сілкаванне...</Entry>
+    <Entry Name="EventEndDoorInteract01">Не магу ўхапіцца. Патрэбны нейкі рычаг, каб яе адкрыць.</Entry>
+    <Entry Name="DescPanel01">Гэта электрычная панэль. У забаўным яна месцы...</Entry>
+    <Entry Name="DescCords01">Электрыка, магчыма, вядзе да дзвярэй.</Entry>
+    <Entry Name="EventLockedDoor">Зачынена.</Entry>
+    <Entry Name="EventOffFail">Мабыць, выконваецца апошняя паслядоўнасць дзеянняў, яна не адключыцца!</Entry>
+    <Entry Name="DescFurnance">Чаму Рэд хацеў, каб я яго забіў? Чаму так? Што мне рабіць?</Entry>
+    <Entry Name="DescMeat">Нават не ўзгадваючы, як Рэду ўдалося злавіць і забіць гэтую істоту, яна відавочна неядомая. Бедны хлопец напэўна быў блізкі да галоднай смерці.</Entry>
+    <Entry Name="DescRedTable">Цяпер я бачу Рэда, як ён сядзіць тут, накіроўваючы мяне. Напэўна, мяне б тут не было, калі б не ён. Навошта яму было пакідаць мяне тут аднаго?!</Entry>
+    <Entry Name="DescRedShelf">Кучы кніг... Дзе Рэд усё гэта назбіраў? Тут усё, ад дапаможнікаў па выжыванні да калекцыі твораў Шэкспіра і Этыкі Канта. Калі ён так праводзіў тут час, то зразумела, чаму ён так дзіўна размаўляў. Мабыць, у яго жыцці было шмат непаразуменняў.</Entry>
+    <Entry Name="DescFeases">Божухна! Па смуроду, думаю, што гэта мог быць яго туалет. Я... Ургх...</Entry>
+    <Entry Name="DescDoll">Божа мой. Гэта... Жудасна. Прынамсі, я буду адзіным чалавекам, які стане сведкам таго, наколькі далёка Рэд апусціўся ў распусту.</Entry>
+    <Entry Name="DescCage">Нядзіўна, што ён галадаў. Ну і апошняя ежа: нармаваныя смаўжы. Аднак, ведаючы Рэда, можа яму і спадабалася.</Entry>
+    <Entry Name="DescMadrass">Пахне каналізацыяй, як Рэд тут спаў? Можа, ён проста не спаў?</Entry>
+    <Entry Name="DescMachines">Вымяральнікі гарэння, вымяраюць тэмпературу, вільготнасць і плынь газу сярод іншых.</Entry>
+    <Entry Name="DescPipes">Трубы.</Entry>
+    <Entry Name="EventPotionDone">Ах, думаю, гэта яно! Пакуль я буду асцярожны, рухаючы яго, яно павінна заставацца стабільным.</Entry>
+    <Entry Name="EventNoGas">Да гарэлкі не падаецца газ.</Entry>
+    <Entry Name="EventLightLitTripod">Газ ужо гарыць.</Entry>
+    <Entry Name="EventRedDead">Я... Рэд. Прабач. Што б з табою тут ні здарылася, гэтаму надышоў канец.</Entry>
+    <Entry Name="DescHooks">Злосна выглядаюць, амаль як мясныя крукі...</Entry>
+    <Entry Name="DescAshes">Попел - усё, што засталося ад майго адзінага сябра тут.</Entry>
+    <Entry Name="DescWallWriting">Бедны Рэд, мне так шкада. Цяпер ты ў спакоі.</Entry>
+    <Entry Name="DescNoose">Колькі гадзін ён правёў з шыяй у гэтай пятлі, проста спрабуючы ўсё гэта скончыць?</Entry>
+    <Entry Name="EventFoundChemRoom">Ах, гэты пакой павінен добра паслужыць мне для змешвання зелляў пад кіраўніцтвам кнігі выбуховых рэчываў.</Entry>
   </CATEGORY>
   <CATEGORY Name="StartUp">
     <Entry Name="ErrorAdd01">Please, try updating your graphics card drivers.</Entry>
